# quick

./: CMakeLists.txt  compile_commands.json  factory.hpp  phoenix.hpp
.cache/clangd/index/: align.hpp.C793048CAE72BEB0.idx  phoenix.hpp.AE1DF548F25339C0.idx  spin_lock.hpp.2647EEB333522814.idx
memory/: align.hpp
tests/: CMakeLists.txt  compile_commands.json  configure.py  thread.cpp
tests/.cache/clangd/index/: thread.cpp.CE056526FF7CE19C.idx
thread/: spin_lock.hpp
